was trying to follow Chris in here

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "week6_testin_practise",
   "version": "1.0.0",
-  "description": "My and Yegana practising tessting",
+  "description": "Julija and Yegana practising testing in here",
   "main": "index.js",
   "type": "module",
   "scripts": {
